# otus_03

.github/workflows/: ci.yml  makefile.yml
otus_03/: Dockerfile  Makefile  README.md  pyproject.toml
otus_03/src/otus_03/: advanced_generator.py  advanced_never.py  basic_any.py  basic_dict.py  basic_final.py  basic_kwargs.py  basic_list.py  basic_optional.py  basic_parameter.py  basic_return.py  basic_tuple.py  basic_typealias.py  basic_union.py  basic_variable.py  intermediate_await.py  intermediate_callable.py  intermediate_calss-var.py  intermediate_decorator.py  intermediate_empty-tuple.py  intermediate_generic.py  intermediate_generic2.py  intermediate_generic3.py  intermediate_literal-string.py  intermediate_literal.py  intermediate_self.py  intermediate_typed-dict.py  intermediate_typed-dict2.py  intermediate_typed-dict3.py  intermediate_unpack.py
