[project]
name = "otus-03"
version = "0.1.0"
description = "Homework for OTUS_03"
authors = [
    {name = "AstraSerg", email = "astraserg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "pyright (>=1.1.399,<2.0.0)"
]

[tool.poetry]
packages = [{include = "otus_03", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

